sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:4: error: not found: value k
	plusPetit(getValeur(k),getValeur(k+1))
                            ^