sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
def tri:Boolean={
	plusPetit(getValeur(k),getValeur(k+1))
}
var T: Int=getNombreValeurs()
for(k<-0 to T-2){
	while(plusPetit(getValeur(k),getValeur(k+1))){
	   echange(k,k+1)
	}
	
}

}
